
- Added RDB_type_is_relation().

- Added built-in operators TUPLE and RELATION.

- Dropped argc argument of RDB_ro_op().

- RDB_insert() and RDB_multi_assign() now support inserting tables.

- Implemented interpreter Duro D/T.

- Fixed bug in Duroadmin - now uses correct floating-point types.

- Replaced ATTRIBUTE_NOT_FOUND_ERROR by NAME_ERROR.

- Using doxygen for the documentation.

Changes for Duro 0.12

- Replaced GNU Autotools by SCons.

- Using tcltest for testing.

- Changed interface for creating read-only operator expressions.

- Replaced RDB_table by RDB_object.

- Replaced RDB_project(), RDB_union() etc. by RDB_expr_to_vtable()

- Removed RDB_expr_any(), RDB_expr_all(), etc.

- Added RDB_init_table() and RDB_init_table_from_type() for creating
  local tables; removed argument 'global' from RDB_create_table()
  and RDB_create_table_from_type().

- Added RDB_table_is_persistent() and RDB_table_is_real().

- Added RDB_dup_nonscalar_type().

- Renamed RDB_expr_var() to RDB_var_ref().

- Removed RDB_parse_table().

- Changes to expression syntax for better conformance with TTM, third
  edition.

Changes for Duro 0.11

- Added RDB_type_attrs().

- Removed RDB_set_errfile(), RDB_get_errfile(), RDB_set_errfn(),
  and RDB_get_errfn().

- Durotcl: Added duro::env seterrfile. dberror is no longer called.

- Bugfixes.

Changes for Duro 0.10

- Replaced RDB_RATIONAL by RDB_FLOAT and RDB_DOUBLE.

- RDB_update() and RDB_delete return the number of tuples updated or
  deleted, respectively.

- Added option --without-tcl to configure.

- RDB_cardinality() returns an RDB_int.

- Added SEMIMINUS and SEMIJOIN.

- Redesigned the API, using scalar types for returning error information
  instead of a numerical error code.

- Added IF operator.

- Dropped catalog table SYS_POSSREPS.

- Implemented RDB_multi_assign().

- Durotcl uses Tutorial D syntax to represent values of user-defined
  types. The comparison operator is passed the actual representation.
